<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChatActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/conversation_header"
        app:titleTextColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcvChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:scrollbars="vertical" >

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:id="@+id/chatInputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/chat_input_text"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/black"/>
            <!--android:theme="@style/AppTheme.Input"-->

        <Button
            android:id="@+id/input_action"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:maxLines="5"
            android:text="@string/chat_send_button"
            android:onClick="sendText"/>
            <!--android:theme="@style/AppTheme.Input"-->


    </LinearLayout>

</LinearLayout>